# nginx-pilot-api

./: .gitignore  .travis.yml  Makefile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  swagger.yaml
nginx_pilot_api/: __init__.py  config.py
nginx_pilot_api/controller/: __init__.py  sites_available_controller.py
nginx_pilot_api/tests/: base.py  test_config.py
nginx_pilot_api/util/: dto.py
