[tool.poetry]
name = "nginx-pilot-api"
version = "0.1.0"
description = ""
authors = ["Querdos <hamza.essayegh@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-restplus = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
